correct button alignment

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
 /* -----------------   Section Styles ------------------- */
 
 .section-container {
-  padding: 1.5em 0em;
+  /* padding: 1em 0em; */
 }
 
 /* ***************                 header             ***************  */
@@ -101,7 +101,7 @@ main {
 
 .projects-container {
   display: flex;
-  width: 80%;
+  width: 85%;
 }
 .project-item-container {
   display: flex;
@@ -117,7 +117,8 @@ main {
 
 .project-item-container p {
   text-align: center;
-  padding: 0.8em;
+  padding: 0.4em;
+  margin: 0.1em;
   font-size: 0.7em;
   width: 85%;
 }
@@ -128,6 +129,8 @@ main {
 }
 
 .app-btn-container {
+  display: flex;
+  justify-content: center;
   margin: 0.4em;
 }
 .app-btn {
@@ -137,7 +140,7 @@ main {
   box-shadow: 2px 2px 4px #1a2c74;
   padding: 0.8em;
   font-size: 0.7em;
-  margin: 0.5em;
+  margin: 0.25em 0.5em;
 }
 
 .app-btn:hover {
@@ -196,7 +199,9 @@ main {
 
 .get-in-touch {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  width: 85%;
 }
 
 /* ***************                 Footer               *************** */
